# FTLLexBuffer

./: ADVANCED_CUSTOM_FUNCTIONS.md  API.md  CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  NOTICE  PARSING.md  PATENTS.md  QUICK_REFERENCE.md  README.md  TERMINOLOGY.md  TESTING.md  TYPE_HINTS.md  VERSIONING.md  pyproject.toml
.github/workflows/: publish.yml
docs/: CUSTOM_FUNCTIONS_GUIDE.md  DOC_00_Index.md  DOC_01_Core.md  DOC_02_Types.md  DOC_03_Parsing.md  DOC_04_Runtime.md  DOC_05_Errors.md  MIGRATION.md  PARSING_GUIDE.md  QUICK_REFERENCE.md  TERMINOLOGY.md  TYPE_HINTS_GUIDE.md
examples/: README.md  README_TYPE_CHECKING.md  benchmark_loaders.py  bidirectional_formatting.py  custom_functions.py  ftl_linter.py  ftl_transform.py  function_introspection.py  locale_fallback.py  property_based_testing.py  quickstart.py  thread_safety.py
scripts/: all.sh  benchmark.sh  bump-version.sh  extract-changelog.sh  lint.sh  release.sh  test.sh  validate_docs.py  validate_version.py
src/ftllexbuffer/: __init__.py  enums.py  guards.py  introspection.py  localization.py  result.py
src/ftllexbuffer/diagnostics/: __init__.py  codes.py  errors.py  templates.py  validation.py
src/ftllexbuffer/parsing/: __init__.py  currency.py  dates.py  guards.py  numbers.py
src/ftllexbuffer/runtime/: __init__.py  bundle.py  cache.py  function_bridge.py  function_metadata.py  functions.py  locale_context.py  plural_rules.py  resolver.py
src/ftllexbuffer/syntax/: __init__.py  ast.py  cursor.py  parser.py  position.py  serializer.py  type_guards.py  validator.py  visitor.py
src/ftllexbuffer/syntax/parser/: __init__.py  core.py  entries.py  expressions.py  patterns.py  primitives.py  whitespace.py
tests/: .pylintrc  conftest.py  mypy.ini  strategies.py  test_ast_comprehensive.py  test_ast_edge_cases.py  test_ast_tooling.py  test_ast_validation_coverage.py  test_bridge_advanced_hypothesis.py  test_bundle_advanced_hypothesis.py  test_bundle_batch_introspection.py  test_bundle_coverage.py  test_bundle_error_handling.py  test_bundle_hypothesis.py  test_bundle_mutation_validation.py  test_cache_advanced_hypothesis.py  test_cache_basic.py  test_cache_concurrency.py  test_cache_properties.py  test_cache_unhashable_comprehensive.py  test_camelcase_params.py  test_crlf_comprehensive.py  test_currency_function.py  test_cursor.py  test_cursor_comprehensive.py  test_cursor_hypothesis.py  test_custom_patterns.py  test_diagnostics_coverage.py  test_diagnostics_hypothesis.py  test_differential_fuzzing.py  test_enums_comprehensive.py  test_fluent_bundle.py  test_fluent_functions.py  test_fluent_guards.py  test_fluent_parser.py  test_fluent_parser_attributes.py  test_fluent_parser_functions.py  test_fluent_parser_term_references.py  test_fluent_parser_terms.py  test_fluent_plural_rules.py  (+93 more)
tests/benchmarks/: __init__.py  conftest.py  test_bundle_benchmarks.py  test_localization_benchmarks.py  test_parser_benchmarks.py
tests/helpers/: type_assertions.py
